[project]
name = "src"
version = "0.1.0"
description = "Food Delivery Data Cleaning Service"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ramesh Vhanamane", email = "your_email@example.com" }
]
dependencies = [
    "pandas",
    "pandera",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic-settings",
    "loguru"
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
    "ruff",        # linter
    "mypy"         # type checker
]
